Add pagination and sorting for Get All Posts REST API